Fix checkbox color in dark mode and Closes #26

--- a/resources/sass/darkmode.scss
+++ b/resources/sass/darkmode.scss
@@ -47,6 +47,10 @@ body {
     background-color: $input-bg;
 }
 
+.form-check-input {
+    background-color: $border-bg;
+}
+
 .text-secondary {
     color: #c0c0c0 !important;
 }
